--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,9 @@
 <nav>
   <img src="images/iwd-logo.jpg" alt="iwd pic logo">
   <ul>
-    <li><a href="products.html">products</a></li>
+    <li><a href="products.html">PRODUCT</a></li>
     <li><a href="about.html">ABOUT</a></li>
     <li><a href="colorlessenergy.github.io">MY WORK</a></li>
-    <li><a href="contact.html">contact</a></li>
+    <li><a href="contact.html">CONTACT</a></li>
   </ul>
 </nav>
