--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,21 @@
 <footer>
-  <div>
+  <div class="footer-about">
     <h2>Iwilldominate</h2>
     <p><a href="contact.html">Lets work together</a></p>
-    <p>Email: theluckorange@yahoo.com</p>
-    <p>&copy; Brian Munoz 2017</p>
+    <div class="contact-footer">
+      <p>Email: theluckorange@yahoo.com</p>
+      <p>&copy; Brian Munoz 2017</p>
+    </div>
   </div>
-  <div>
+  <div class="footer-desc">
     <p>Brian Munoz is a web developer who is trying to make the best products for the best people. He will try his best to make responsive and dynamic websites</p>
   </div>
-  <div>
+  <div class="footer-about">
     <p>About</p>
     <ul>
       <li><a href="products.html">products</a></li>
-      <li><a href="about.html">ABOUT</a></li>
-      <li><a href="colorlessenergy.github.io">MY WORK</a></li>
+      <li><a href="about.html">about</a></li>
+      <li><a href="colorlessenergy.github.io">my work</a></li>
       <li><a href="contact.html">contact</a></li>
     </ul>
   </div>
