--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
   <div class="footer-desc">
     <p>Brian Munoz is a web developer who is trying to make the best products for the best people. He will try his best to make responsive and dynamic websites</p>
   </div>
-  <div class="footer-about">
+  <div class="about-footer-iwd">
     <p>About</p>
     <ul>
       <li><a href="products.html">products</a></li>
