--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,18 @@
 <nav>
   <img src="images/iwd-logo.jpg" alt="iwd pic logo">
-  <ul>
+  <ul class="nav">
     <li><a href="products.html">PRODUCT</a></li>
     <li><a href="about.html">ABOUT</a></li>
     <li><a href="colorlessenergy.github.io">MY WORK</a></li>
     <li><a href="contact.html">CONTACT</a></li>
   </ul>
+  <img id="button" class="burger-menu" src="images/menu-icon.svg" alt="icon burger menu">
+  <div id="rs" class="responsivenav">
+    <ul>
+      <li><a href="products.html">PRODUCT</a></li>
+      <li><a href="about.html">ABOUT</a></li>
+      <li><a href="colorlessenergy.github.io">MY WORK</a></li>
+      <li><a href="contact.html">CONTACT</a></li>
+    </ul>
+  </div>
 </nav>
